--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,10 +7,10 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" (click)="gotoLogin()">Login</a>
+            <a href="Javascript:;" class="nav-link active" aria-current="page" (click)="gotoLogin()">Login</a>
           </li>
           <li class="nav-item" >
-            <a (click)="gotoCardList()" class="nav-link">Cards</a>
+            <a href="Javascript:;" (click)="gotoCardList()" class="nav-link">Cards</a>
           </li>
         </ul>
       </div>
