--- a/src/app/modules/cards/cards.component.html
+++ b/src/app/modules/cards/cards.component.html
@@ -6,53 +6,64 @@
         </div>
     </div>
 </div>
-<div class="row" style="margin:50px 0">
-<div class="col-md-3 text-center py-5"  *ngFor="let data of userLists; let i =index">
-  <div class="card" id="myId" style="height:54mm; width:86mm; border:1px solid #000;">
-    <div class="row" style="padding:3px 0">
-      <div class="col-md-3 text-center" style="padding-top:10px; padding-left:15px">
-        <img height="70" src="../../../assets/logo.png"/>
-      </div>
-      <div class="col-md-9" style="padding-top:1px; color:#0096c7">
-        <div style="font-weight:bold; font-size:14px">Tribhuwan University</div>
-        <div style="font-weight:medium; font-size:12px">Central Library</div>
-        <div style="font-size:11px;">kirtipur, Kathmandu</div>
-        <div style="font-size:10px; color:#000">Email: tucl@tucl.org.np, URL: www.tucl.org.np</div>
-        <div style="font-size:10px; color:#000">Phone no:+977-1-4331317,43331318</div>
+
+<mat-tab-group>
+  <mat-tab label="Landscape"> 
+    <div class="row">
+      <div class="col-md-12">
+        <button class="btn btn-primary btn-xs">Download All</button>
       </div>
 
-      <div class="col-md-12 text-center" style="background-color:#023e8a; color:#fff; padding:2px 0; font-size:12px;" >
-        <span style="text-transform:uppercase; letter-spacing: 3px;">PRIVATE</span>
+      <div class="col-md-3 text-center py-5"  *ngFor="let data of userLists; let i =index">
+        <div class="card" id="myId" style="height:54mm; width:86mm; border:1px solid #000;">
+          <div class="row" style="padding:3px 0">
+            <div class="col-md-3 text-center" style="padding-top:10px; padding-left:15px">
+              <img height="70" src="../../../assets/logo.png"/>
+            </div>
+            <div class="col-md-9" style="color:#0096c7">
+              <div style="font-weight:bold; font-size:14px">Tribhuwan University</div>
+              <div style="font-weight:medium; font-size:12px">Central Library</div>
+              <div style="font-size:11px;">kirtipur, Kathmandu</div>
+              <div style="font-size:10px; color:#000">Email: tucl@tucl.org.np, URL: www.tucl.org.np</div>
+              <div style="font-size:10px; color:#000">Phone no:+977-1-4331317,43331318</div>
+            </div>
+      
+            <div class="col-md-12 text-center" style="background-color:#023e8a; color:#fff; padding:2px 0; font-size:12px;" >
+              <span style="text-transform:uppercase; letter-spacing: 3px;">PRIVATE</span>
+            </div>
+          </div>
+          
+          <div class="row" style="text-align:left; padding:0 10px; font-size:10px;font-family: Arial, Helvetica, sans-serif;">
+            <!-- <barcode style=" height:20px; z-index:5555;" v-bind:value="barcodeValue">
+                Show this if the rendering fails.
+            </barcode> -->
+            <div class="col-md-10">
+              <div>Name: {{data.firstname}} {{data.surname}}</div>
+              <div>Address: {{data.address}}</div>
+              <div>Email: {{data.email}}</div>
+              <div>Department: IT</div>
+              <div>Phone: {{data.phone}}</div>
+              <div>Issued On: {{data.date_enrolled}}
+              <div class="barcode">
+                <!-- <barcode displayValue="false" style="margin: -28px 0 0 116px; !important;" height="15" width="1" v-bind:value="barcodeValue">
+                  Show this if the rendering fails.
+                </barcode> -->
+              </div>
+            </div>
+          </div>
+            <div class="col-md-2">
+              <img height="65" :src="data.image">
+            </div>
+          </div>
       </div>
-    </div>
-    
-    <div class="row" style="text-align:left; padding:0 10px; font-size:10px;font-family: Arial, Helvetica, sans-serif;">
-      <!-- <barcode style=" height:20px; z-index:5555;" v-bind:value="barcodeValue">
-          Show this if the rendering fails.
-      </barcode> -->
-      <div class="col-md-10">
-        <div>Name: {{data.firstname}} {{data.surname}}</div>
-        <div>Address: {{data.address}}</div>
-        <div>Email: {{data.email}}</div>
-        <div>Department: IT</div>
-        <div>Phone: {{data.phone}}</div>
-        <div>Issued On: {{data.date_enrolled}}
-        <div class="barcode">
-          <!-- <barcode displayValue="false" style="margin: -28px 0 0 116px; !important;" height="15" width="1" v-bind:value="barcodeValue">
-            Show this if the rendering fails.
-          </barcode> -->
-        </div>
+      <div class="row mt-3">
+        <div class="col-md-12 text-center">
+        <button class="btn btn-primary btn-sm" (click)="generateCard(data)">Download</button>
       </div>
-    </div>
-      <div class="col-md-2">
-        <img height="65" :src="data.image">
       </div>
-    </div>
-</div>
-<div class="row mt-3">
-  <div class="col-md-12 text-center">
-  <button class="btn btn-primary btn-sm" (click)="generateCard(data)">Download</button>
-</div>
-</div>
-</div>
-</div>
+      </div>
+      </div>
+  </mat-tab>
+  <mat-tab label="Portrait"> Portrait </mat-tab>
+  <!-- <mat-tab label="Third"> Content 3 </mat-tab> -->
+</mat-tab-group>
