--- a/src/app/modules/cards/cards.component.html
+++ b/src/app/modules/cards/cards.component.html
@@ -11,7 +11,7 @@
   <mat-tab label="Landscape"> 
     <div class="row">
       <div class="col-md-12">
-        <button class="btn btn-primary btn-xs">Download All</button>
+        <button class="btn btn-primary btn-sm">Download All</button>
       </div>
 
       <div class="col-md-3 text-center py-5"  *ngFor="let data of userLists; let i =index">
@@ -20,11 +20,11 @@
             <div class="col-md-3 text-center" style="padding-top:10px; padding-left:15px">
               <img height="70" src="../../../assets/logo.png"/>
             </div>
-            <div class="col-md-9" style="color:#0096c7">
-              <div style="font-weight:bold; font-size:14px">Tribhuwan University</div>
-              <div style="font-weight:medium; font-size:12px">Central Library</div>
-              <div style="font-size:11px;">kirtipur, Kathmandu</div>
-              <div style="font-size:10px; color:#000">Email: tucl@tucl.org.np, URL: www.tucl.org.np</div>
+            <div class="col-md-9" style="color:#0096c7; margin: 0 !important;padding: 0 !important;">
+              <div style="font-weight:bold; font-size:12px">Tribhuwan University</div>
+              <div style="font-size:10px">Central Library</div>
+              <div style="font-size:10px;">kirtipur, Kathmandu</div>
+              <div style="font-size:10px; color:#000;margin: 0;padding: 0;">Email: tucl@tucl.org.np, URL: www.tucl.org.np</div>
               <div style="font-size:10px; color:#000">Phone no:+977-1-4331317,43331318</div>
             </div>
       
