--- a/src/app/modules/cards/cards.component.html
+++ b/src/app/modules/cards/cards.component.html
@@ -1,39 +1,60 @@
-
 <div class="row">
-    <div cols="12" class="col-md-12 text-center">
-        <div class="card" tile style="background-color:#272640; color: #fff;padding:5px 0; border-radius: 0;">
-            <h1>Cards</h1>
-        </div>
+  <div cols="12" class="col-md-12 text-center">
+    <div class="card" tile style="background-color:#272640; color: #fff;padding:5px 0; border-radius: 0;">
+      <h1>Cards</h1>
     </div>
+  </div>
 </div>
 
 <mat-tab-group>
-  <mat-tab label="Landscape"> 
+  <mat-tab label="Landscape">
     <div class="row">
       <div class="col-md-12">
-        <button class="btn btn-primary btn-sm">Download All</button>
+        <button class="btn btn-primary btn-sm" (click)="downloadZip()">Download All</button>
+      </div>
+      <div class="row">
+        <div class="col-md-4 px-2">
+          <mat-form-field outlined>
+            <div>
+              <mat-toolbar>
+                <input [value]="selectedFileNames.length ? selectedFileNames : 'Select Signature PNG Images'"
+                       matInput/>
+
+                <button class="btn btn-primary" [disabled]="!selectedFiles" (click)="upload()">
+                  Upload
+                </button>
+              </mat-toolbar>
+
+              <input type="file" id="fileInput" name="fileInput" accept="image/*" multiple
+                (change)="selectFiles($event)" />
+            </div>
+          </mat-form-field>
+        </div>
       </div>
 
-      <div class="col-md-3 text-center py-5"  *ngFor="let data of userLists; let i =index">
+      <div class="col-md-3 text-center py-5 px-2" *ngFor="let data of userLists.slice(0,1); let i =index">
         <div class="card" id="myId" style="height:54mm; width:86mm; border:1px solid #000;">
           <div class="row" style="padding:3px 0">
             <div class="col-md-3 text-center" style="padding-top:10px; padding-left:15px">
-              <img height="70" src="../../../assets/logo.png"/>
+              <img height="70" src="../../../assets/logo.png" />
             </div>
             <div class="col-md-9" style="color:#0096c7; margin: 0 !important;padding: 0 !important;line-height: 1.5;">
               <div style="font-weight:bold; font-size:12px; margin: 0; padding: 0;">Tribhuwan University</div>
               <div style="font-size:10px">Central Library</div>
               <div style="font-size:10px;">kirtipur, Kathmandu</div>
-              <div style="font-size:10px; color:#000;margin: 0;padding: 0;">Email: tucl@tucl.org.np, URL: www.tucl.org.np</div>
+              <div style="font-size:10px; color:#000;margin: 0;padding: 0;">Email: tucl@tucl.org.np, URL:
+                www.tucl.org.np</div>
               <div style="font-size:10px; color:#000">Phone no:+977-1-4331317,43331318</div>
             </div>
-      
-            <div class="col-md-12 text-center" style="background-color:#023e8a; color:#fff; padding:2px 0; font-size:12px;" >
+
+            <div class="col-md-12 text-center"
+              style="background-color:#023e8a; color:#fff; padding:2px 0; font-size:12px;">
               <span style="text-transform:uppercase; letter-spacing: 3px;">PRIVATE</span>
             </div>
           </div>
-          
-          <div class="row" style="text-align:left; padding:0 10px; font-size:10px;font-family: Arial, Helvetica, sans-serif;">
+
+          <div class="row"
+            style="text-align:left; padding:0 10px; font-size:10px;font-family: Arial, Helvetica, sans-serif;">
             <!-- <barcode style=" height:20px; z-index:5555;" v-bind:value="barcodeValue">
                 Show this if the rendering fails.
             </barcode> -->
@@ -44,27 +65,28 @@
               <div>Department: IT</div>
               <div>Phone: {{data.phone}}</div>
               <div>Issued On: {{data.date_enrolled}}
-              <div class="barcode">
-                <!-- <barcode displayValue="false" style="margin: -28px 0 0 116px; !important;" height="15" width="1" v-bind:value="barcodeValue">
+                <div class="barcode">
+                  <!-- <barcode displayValue="false" style="margin: -28px 0 0 116px; !important;" height="15" width="1" v-bind:value="barcodeValue">
                   Show this if the rendering fails.
                 </barcode> -->
+                </div>
               </div>
             </div>
-          </div>
             <div class="col-md-2">
               <img height="65" src="../../../assets/pp.jpg">
-              <img style="top: 151px;right: -8px;position: absolute;" height="50" src="../../../assets/sign.png"/>
-              <img height="100" style="top: 82px; right: 3px; position: absolute;" src="../../../assets/stamp.png"/>
+              <img *ngFor='let signature of signatureImagePath' [src]="signature"
+                style="top: 151px;right: -8px;position: absolute;" height="50" />
+              <img height="100" style="top: 82px; right: 3px; position: absolute;" src="../../../assets/stamp.png" />
             </div>
           </div>
+        </div>
+        <!-- <div class="row mt-3">
+          <div class="col-md-12 text-center">
+            <button class="btn btn-primary btn-sm" (click)="generateCard(data)">Download</button>
+          </div>
+        </div> -->
       </div>
-      <div class="row mt-3">
-        <div class="col-md-12 text-center">
-        <button class="btn btn-primary btn-sm" (click)="generateCard(data)">Download</button>
-      </div>
-      </div>
-      </div>
-      </div>
+    </div>
   </mat-tab>
   <mat-tab label="Portrait"> Portrait </mat-tab>
   <!-- <mat-tab label="Third"> Content 3 </mat-tab> -->
