--- a/src/app/modules/cards/cards.component.html
+++ b/src/app/modules/cards/cards.component.html
@@ -10,7 +10,7 @@
   <mat-tab label="Landscape">
     <div class="row">
       <div class="col-md-12">
-        <button class="btn btn-primary btn-sm" (click)="downloadZip()">Download All</button>
+        <button class="btn btn-primary btn-sm" (click)="download()">Download All</button>
       </div>
       <div class="row">
         <div class="col-md-4 px-2">
